--- a/cpp04/ex03/Makefile
+++ b/cpp04/ex03/Makefile
@@ -1,9 +1,13 @@
 NAME	:= animal
 CXX		:= c++ #change to clang++
-CXXFLAGS:= -Wall -Wextra -Werror -std=c++98 -fsanitize=address
+CXXFLAGS:= -Wall -Wextra -Werror -std=c++98 -pedantic -Wshadow -fsanitize=address
 
 SRCS	:= main.cpp \
-			
+			AMateria.cpp \
+			Character.cpp \
+			Cure.cpp \
+			Ice.cpp \
+			MateriaSource.cpp
 						
 OBJS	:= $(SRCS:.cpp=.o)
 
