--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -5,7 +5,9 @@ CXXFLAGS:= -Wall -Wextra -Werror -std=c++98 -fsanitize=address
 SRCS	:= main.cpp \
 			Bureaucrat.cpp \
 			Form.cpp \
-			ShrubberyCreationForm.cpp
+			ShrubberyCreationForm.cpp \
+			RobotomyRequestForm.cpp \
+			PresidentialPardonForm.cpp
 						
 OBJS	:= $(SRCS:.cpp=.o)
 
