--- a/cpp06/ex01/Makefile
+++ b/cpp06/ex01/Makefile
@@ -1,13 +1,9 @@
-NAME	:= bureaucrat
-CXX		:= clang++
-CXXFLAGS:= -Wall -Wextra -Werror -std=c++98
+NAME	:= convert
+CXX		:= c++ # change to clang++
+CXXFLAGS:= -g -Wall -Wextra -Werror -std=c++98 -fsanitize=address #delete -fsanitize=address
 
 SRCS	:= main.cpp \
-			Bureaucrat.cpp \
-			Form.cpp \
-			ShrubberyCreationForm.cpp \
-			RobotomyRequestForm.cpp \
-			PresidentialPardonForm.cpp
+			Data.cpp
 						
 OBJS	:= $(SRCS:.cpp=.o)
 
